Fixed layout issues

--- a/css/fretboard.css
+++ b/css/fretboard.css
@@ -1,10 +1,10 @@
 
 ._gf_fretboard {
-    margin: 15px;
-    padding: 6px;
+    margin-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
     position:relative;
-    --display: table;
-    --border:1px solid black;
+    float:left;
     --fretboardBG: rgb(82, 73, 75);
     --fretmarkerOpacity: .1;
     --hilightNoteBorder: 1px solid black;
@@ -16,7 +16,7 @@
 }
 
 /* Themes */
-.bright {
+._gf_fretboard.bright {
     --fretboardBG: sandybrown;
     --hilightNoteBorder: 1px solid white;
     --fretmarkerOpacity: .3;
@@ -27,7 +27,18 @@
     --seventh: tan;
     --ninth: purple;
 }
-.simple {
+._gf_fretboard.navy {
+    --fretboardBG: rgb(48, 102, 116);
+    --hilightNoteBorder: 1px solid white;
+    --fretmarkerOpacity: .3;
+    --hilightNoteRadius: 50%;
+    --root: blue;
+    --third: green;
+    --fifth: red;
+    --seventh: tan;
+    --ninth: purple;
+}
+._gf_fretboard.simple {
     --fretboardBG: transparent;
     --hilightNoteBorder: 1px solid black;
     --fretmarkerOpacity: 0;
@@ -40,7 +51,6 @@
 }
 
 ._gf_fretboard ._fretboard{
-    --position:relative;
     display: table;
 }
 ._gf_fretboard ul{
@@ -66,7 +76,7 @@
     left:calc(50% - 1em);
     bottom:0%;
     position:absolute;
-  }
+}
 
 ._gf_fretboard li:nth-child(2){
     border-left: 1.25em solid #333333;
@@ -80,8 +90,8 @@
 ._gf_fretboard ._fretboard ul:first-child li{
     background: none;
     display: flex !important;
- } 
- ._gf_fretboard ._fretboard ul:first-child li:nth-child(2){
+} 
+._gf_fretboard ._fretboard ul:first-child li:nth-child(2){
     border-left: 1.25em solid transparent;
 }
 
@@ -130,7 +140,7 @@
     color:white;
     font-size: .5em;
     align-content: center;
-  }
+}
 
 /* interval colors */
 ._gf_fretboard .root{
@@ -170,28 +180,26 @@
 }
 
 ._gf_fretboard #_output{
-    position: absolute;
+    position:absolute;
     width:100%;
-    padding:5px;
-    top:2.15em;
-    height:50px;
+    margin:auto;
+    top:20px;
     text-align: center;
+    padding-bottom:0px;
     font-family: serif;
     font-size: 1.65em;
-    --border:1px solid green;
-   
+    z-index: 5;
 }
 
 ._gf_fretboard #_beatMarker{
-    position: relative;
-    display:table;
-    padding-bottom: 4px;
-    top: 45px;
-    text-align: center;
+    --position:absolute;
+    --width:100%;
+    margin:auto;
+    padding-bottom: 7px;
+    text-align: left;
     font-family: serif;
-    height:10px;
+    height:22px;
     font-size: 3em;
-    --border:1px solid black;
 }
 .beatMarkerOff{
     background-color:transparent;
